src/objects/INT_Envio_Programado__c.object
<CustomObject>
    <description>Representa la tabla de parametrización correspondiente a los diferentes eventos/movimientos de siniestros/asistencias/reclamaciones que se deben informar a cada una de las aseguradoras.</description>
    <fields>
        <fullName>ENV_CAS_Activo__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Activo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENV_DAT_Fecha_Inicio__c</fullName>
        <label>Fecha Inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ENV_DAT_Fecha_Puntual__c</fullName>
        <description>Fecha de ejecución para envíos puntuales</description>
        <label>Fecha Puntual</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ENV_FOR_CompaniaId__c</fullName>
        <formula>ENV_LKP_Fichero__r.FIC_LKP_Compania__r.CUE_TXT_Identificador__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Id Compañía</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENV_FOR_CompaniaNombre__c</fullName>
        <formula>ENV_LKP_Fichero__r.FIC_LKP_Compania__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compañía</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENV_LKP_Fichero__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Id Fichero</label>
        <referenceTo>INT_Config_Fichero_CIA__c</referenceTo>
        <relationshipName>Integraciones_Envios_Programados_CIA</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ENV_NUM_Contador_Lote__c</fullName>
        <description>Campo para almacenar el Nº de lote del siguiente envío</description>
        <label>Contador Lote</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENV_SEL_Dias_Semana__c</fullName>
        <label>Días de la Semana</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Dias_Semana</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENV_SEL_Hora__c</fullName>
        <label>Hora</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>GLB_SEL_Horas</valueSetName>
        </valueSet>
    </fields>
    <label>Integraciones: Envío Programado CIA</label>
    <nameField>
        <displayFormat>ENV{000000}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integraciones: Envío Programado CIA</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Validacion_de_fechas_1</fullName>
        <active>true</active>
        <description>No permite completar simultáneamente el campo ENV_SEL_Dias_Semana__c y ENV_DAT_Fecha_Puntual__c. ni dejar ambos vacíos</description>
        <errorConditionFormula>OR(AND(ISBLANK(ENV_SEL_Dias_Semana__c),ISBLANK(ENV_DAT_Fecha_Puntual__c)),AND(NOT(ISBLANK(ENV_SEL_Dias_Semana__c)),NOT(ISBLANK(ENV_DAT_Fecha_Puntual__c))),AND(NOT(ISBLANK(ENV_DAT_Fecha_Inicio__c)),NOT(ISBLANK(ENV_DAT_Fecha_Puntual__c))))</errorConditionFormula>
        <errorMessage>Si desea una tarea puntual rellene solamente el campo &apos;Fecha Puntual&apos;, en caso contrario, rellene los campos &apos;Días de la Semana&apos; y/o &apos;Fecha Inicio&apos; (Opcional)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validacion_de_fechas_2</fullName>
        <active>true</active>
        <description>No permite dejar en blanco ENV_DAT_Fecha_Inicio__c y ENV_DAT_Fecha_Puntual__c a la vez</description>
        <errorConditionFormula>AND(ISBLANK(ENV_DAT_Fecha_Inicio__c),(ISBLANK(ENV_DAT_Fecha_Puntual__c)),ISBLANK(ENV_SEL_Dias_Semana__c))</errorConditionFormula>
        <errorMessage>Campos insuficientes. Cumplimente el campo &apos;Días de la Semana&apos; si desea una tarea recurrente o &apos;Fecha Puntual&apos; si desea una tarea puntual.</errorMessage>
    </validationRules>
</CustomObject>